objects/Account.object
<CustomObject>
    <fields>
        <fullName>Incumbent_Recs_Contract_Expiration__c</fullName>
        <description>If the client is currently using software that is a competitor to RichRelevance&apos;s Recommend product, indicate the contract date their current software expires.</description>
        <inlineHelpText>If the client is currently using software that is a competitor to RichRelevance&apos;s Recommend product, indicate the contract date their current software expires.</inlineHelpText>
        <label>Incumbent Recommend Contract Exp.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_vertical__c</fullName>
        <description>Used by Marketing for segmentation and BI for Measels report</description>
        <label>Dont Use: Industry Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apparel &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Crafts</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Big Box</fullName>
                </value>
                <value>
                    <fullName>Books/Music/Videos</fullName>
                </value>
                <value>
                    <fullName>Child/Baby Care</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Consumer Appliances</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Department store</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Event &amp; Movie Tickets</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Flowers, Greetings, &amp; Specialty Gifts</fullName>
                </value>
                <value>
                    <fullName>Grocery/ Food/ Bev</fullName>
                </value>
                <value>
                    <fullName>Hardware/Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Health/Wellness/Beauty</fullName>
                </value>
                <value>
                    <fullName>Housewares &amp; Home furnishings</fullName>
                </value>
                <value>
                    <fullName>Industrial/ Janitorial Supplies</fullName>
                </value>
                <value>
                    <fullName>Industrial Machinery &amp; Equipment</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Medical Supplies</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Shoes &amp; Athletic Footwear</fullName>
                </value>
                <value>
                    <fullName>Specialty / non-Apparel</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods &amp; Outdoor Activities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Contract_Term__c</fullName>
        <description>Initial contract term in months.</description>
        <inlineHelpText>Initial contract term in months.</inlineHelpText>
        <label>Initial Contract Term</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intacct_Customer_ID__c</fullName>
        <description>Intacct Customer ID</description>
        <label>Intacct Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Revenue_YTD__c</fullName>
        <description>YTD Revenue</description>
        <label>Intacct Revenue YTD</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client side JS</fullName>
                </value>
                <value>
                    <fullName>Server side API</fullName>
                </value>
                <value>
                    <fullName>Client side REST API</fullName>
                </value>
                <value>
                    <fullName>Find API</fullName>
                </value>
                <value>
                    <fullName>Autocomplete API</fullName>
                </value>
                <value>
                    <fullName>Experience Browser</fullName>
                </value>
                <value>
                    <fullName>Experience Designer</fullName>
                </value>
                <value>
                    <fullName>Dynamic Experiences</fullName>
                </value>
                <value>
                    <fullName>Find Overlay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Date_Provided_Reference__c</fullName>
        <description>Last date that a reference was provided by someone at this account.  This is used to track reference history, and ensure that contacts at accounts are not being asked too frequently for a reference.</description>
        <inlineHelpText>Last date that a reference was provided by someone at this account.  This is used to track reference history, and ensure that contacts at accounts are not being asked too frequently for a reference.</inlineHelpText>
        <label>Last Date Provided Reference</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_On_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer has been rolled out on support</description>
        <inlineHelpText>Check this box if the customer has been introduced and rolled out on the support plan</inlineHelpText>
        <label>Live On Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Development Rep (SDR) is the person in sales development assigned to the account.  This role typically pre-qualifies the lead prior to making a contact and/or account.</description>
        <inlineHelpText>Sales Development Rep (SDR) is the person in sales development assigned to the account.  This role typically pre-qualifies the lead prior to making a contact and/or account.</inlineHelpText>
        <label>Sales Development Rep (SDR)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Clause__c</fullName>
        <label>Marketing Clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Opp_Source__c</fullName>
        <description>Laura created this for reporting - probably for SB dashboards.  Need to investigate.</description>
        <label>Marketing Opp Source (Reporting Only)</label>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Source__c</field>
            <operation>notEqual</operation>
            <value>Direct Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketing_Primary_Vertical__c</fullName>
        <label>Primary Sub-vertical</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Merchant_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace Defense</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Auto Parts</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Big Box</fullName>
                </value>
                <value>
                    <fullName>Business Solutions</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Department store</fullName>
                </value>
                <value>
                    <fullName>Drug Store/Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Flash Sale</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Hardware Home Improvement DIY</fullName>
                </value>
                <value>
                    <fullName>Healthcare Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Adult)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Auto)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Beverages)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Cameras)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Couponing)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Currency)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (DIY)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Education)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Flowers)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Gaming)</fullName>
                </value>
                <value>
                    <fullName>Other Specialty (Gardening)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Opportunity_Stage__c</fullName>
        <description>Laura created this for reporting - probably for SB dashboards.  Need to investigate.</description>
        <label>Max Opportunity Stage (Reporting Only)</label>
        <summarizedField>Opportunity.Probability</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>(SaaS) Lead - 10%, (SaaS) Discovery Phase - 20%, (SaaS) Meeting Confirmed - 30%, (SaaS) Opportunity Lost - 0%, (Ads) Closed/Lost - 0%, (SaaS) Change in Performance - (35%), (SaaS) Client Termination - (35%), (SaaS) Product Termination - (35%), (SaaS) Chan</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchant_Type__c</fullName>
        <description>New merchant type value</description>
        <label>Vertical Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Retail-Omni-Channel B2C</fullName>
                </value>
                <value>
                    <fullName>Retail-Online B2C</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Branded Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Telco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Brick_and_Mortar_Stores__c</fullName>
        <label># of Brick and Mortar Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Revenue__c</fullName>
        <description>Represents the total online revenue of a customer</description>
        <label>Online Annual Revenue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <description>For EMEA Reporting</description>
        <label>Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>(SaaS) Lead - 10%, (SaaS) Discovery Phase - 20%, (SaaS) Meeting Confirmed - 30%, (SaaS) Opportunity Identified - 35%, (SaaS) Contract Signed/Dependencies  97%, (SaaS) Contract Signed - 100%, (SaaS) Change in Performance - (35%), (SaaS) Client Termination</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Ranking__c</fullName>
        <description>This field tracks the Personal Ranking of the Account Owner Assignments</description>
        <inlineHelpText>Please enter the Ranking of this account based on your Tab Accounts</inlineHelpText>
        <label>Owner Ranking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Model__c</fullName>
        <inlineHelpText>Used for Partner accounts only.</inlineHelpText>
        <label>Partner Business Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Partner</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Partner Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>RichRelevance Product Resell</fullName>
                </value>
                <value>
                    <fullName>Teaming</fullName>
                </value>
                <value>
                    <fullName>Technical Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Business_Terms_Per_Agreement__c</fullName>
        <description>Captures Partner Information at a high level, such as, &quot;Receives 10% of all deals sold.&quot;  Used for Partner accounts only.</description>
        <inlineHelpText>Captures Partner Information at a high level, such as, &quot;Receives 10% of all deals sold.&quot;  Used for Partner accounts only.</inlineHelpText>
        <label>Partner Business Terms Per Agreement</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Process Outsourcer (BPO)</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Content Management System (CMS)</fullName>
                </value>
                <value>
                    <fullName>Data Management Platform (DMP)</fullName>
                </value>
                <value>
                    <fullName>ECommerce Platform</fullName>
                </value>
                <value>
                    <fullName>Email Service Provider (ESP/Marketing)</fullName>
                </value>
                <value>
                    <fullName>In-Store</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>System Integrator (SI) / Digital Agency</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presidential_Sponsor__c</fullName>
        <description>The C-Level connection with our most important accounts, and the highest level of escalation/account expansion.  Assignment managed by Jake Bailey, VP Product Marketing and Solutions.</description>
        <inlineHelpText>The C-Level connection with our most important accounts, and the highest level of escalation/account expansion.  Assignment managed by Jake Bailey, VP Product Marketing and Solutions.</inlineHelpText>
        <label>Presidential Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eduardo Sanchez</fullName>
                </value>
                <value>
                    <fullName>MK Marsden</fullName>
                </value>
                <value>
                    <fullName>Bill Pierce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Team will reach this contact whenever {rr} has maintenance.</description>
        <inlineHelpText>Support Team will reach this contact whenever {rr} has maintenance.</inlineHelpText>
        <label>Primary Contact for Maintenance</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Complete_Date__c</fullName>
        <description>Tracks the date when the Profile complete checkbox was checked</description>
        <label>Account Profile Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be filled out by SB or Graeme when the account information is complete.</description>
        <label>Profile Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Completed_By__c</fullName>
        <label>Profile Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Notes__c</fullName>
        <description>Enter notes relevant to the last reference such as who provided the reference, who they provided the reference to, and any other helpful information.</description>
        <inlineHelpText>Enter notes relevant to the last reference such as who provided the reference, who they provided the reference to, and any other helpful information.</inlineHelpText>
        <label>Reference Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Notes__c</fullName>
        <label>Renewal Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Renewal term in months.</description>
        <inlineHelpText>Renewal term in months.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Jira_account_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Jira account id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Owner.Division</formula>
        <label>DONT USE: Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Card_Date__c</fullName>
        <label>Score Card Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score_Card__c</fullName>
        <label>Score Card URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Search_Contract_Exp__c</fullName>
        <label>Site Search Contract Exp.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Search_Provider__c</fullName>
        <label>Site Search Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3dCart</fullName>
                </value>
                <value>
                    <fullName>3ssolutions.com</fullName>
                </value>
                <value>
                    <fullName>Active Decisions</fullName>
                </value>
                <value>
                    <fullName>Alexander Interactive</fullName>
                </value>
                <value>
                    <fullName>Baynote</fullName>
                </value>
                <value>
                    <fullName>BloomReach</fullName>
                </value>
                <value>
                    <fullName>Celebros</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>EasyAsk</fullName>
                </value>
                <value>
                    <fullName>ElasticSearch</fullName>
                </value>
                <value>
                    <fullName>Empathy Broker</fullName>
                </value>
                <value>
                    <fullName>Escalate Retail</fullName>
                </value>
                <value>
                    <fullName>FactFinder (by Omikron)</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>FredHopper</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>GroupBy</fullName>
                </value>
                <value>
                    <fullName>GSI Commerce</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>iPhrase</fullName>
                </value>
                <value>
                    <fullName>Linx (Chaordic/ Neemu)</fullName>
                </value>
                <value>
                    <fullName>Locayta</fullName>
                </value>
                <value>
                    <fullName>Lucene</fullName>
                </value>
                <value>
                    <fullName>MarketLive</fullName>
                </value>
                <value>
                    <fullName>Nextopia</fullName>
                </value>
                <value>
                    <fullName>Omniture (Adobe)</fullName>
                </value>
                <value>
                    <fullName>Oracle ATG</fullName>
                </value>
                <value>
                    <fullName>Oracle Commerce Cloud</fullName>
                </value>
                <value>
                    <fullName>Oracle Endeca</fullName>
                </value>
                <value>
                    <fullName>Progress EasyAsk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Squad__c</fullName>
        <description>Designates the Client Services Squad responsible for managing the account.</description>
        <inlineHelpText>Designates the Client Services Squad responsible for managing the account.</inlineHelpText>
        <label>Squad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US - Gold</fullName>
                </value>
                <value>
                    <fullName>US - Red</fullName>
                </value>
                <value>
                    <fullName>EU - Black</fullName>
                </value>
                <value>
                    <fullName>EU - Green</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Data Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Last_Updated__c</fullName>
        <description>Tracks the Last Updated date for Account Status</description>
        <label>Status Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the health of current customers.  Gold=Referenceable Customer, Green= Customer in Good Standing, Yellow=Some Trouble at the Account, Work required to get in Good Standing, Red= Account is at risk.  Action required to improve account.</description>
        <inlineHelpText>Indicates the health of current customers.  Gold=Referenceable Customer, Green= Customer in Good Standing, Yellow=Some Trouble at the Account, Work required to get in Good Standing, Red= Account is at risk.  Action required to improve account.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Gold</fullName>
                    <color>#FFCC33</color>
                    <label>1 - Gold</label>
                </value>
                <value>
                    <fullName>2 - Green</fullName>
                    <color>#009900</color>
                    <label>2 - Green</label>
                </value>
                <value>
                    <fullName>3 - Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>3 - Yellow</label>
                </value>
                <value>
                    <fullName>4 - Red</fullName>
                    <color>#CC0000</color>
                    <label>4 - Red</label>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>Tracks the location of the Account Owner</description>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                    <label>APAC Other</label>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>FraBeLux</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>LATAM Other</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>SE Europe &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Package__c</fullName>
        <description>Support level the customer is on.  Standard is the default.  Other levels are assigned as contractually agreed with the customer, or on special exception basis.</description>
        <inlineHelpText>Support level the customer is on.  Standard is the default.  Other levels are assigned as contractually agreed with the customer, or on special exception basis.</inlineHelpText>
        <label>Support Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Region__c</fullName>
        <label>Support Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_for_convenience_days__c</fullName>
        <label>Term for convenience days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>